[gd_scene load_steps=5 format=3 uid="uid://esywf0ii8i6u"]

[ext_resource type="Script" uid="uid://cu5cqaa8od55x" path="res://scenes/main.gd" id="1_fmw02"]
[ext_resource type="Texture2D" uid="uid://bj2ambwei5ogi" path="res://assets/bg.png" id="2_fps3c"]
[ext_resource type="PackedScene" uid="uid://tmcq5gpw66gu" path="res://scenes/hud.tscn" id="3_s77pf"]
[ext_resource type="PackedScene" uid="uid://cad25ojl47q8" path="res://scenes/game_over_menu.tscn" id="6_xkat8"]

[node name="Main" type="Node"]
script = ExtResource("1_fmw02")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(500, 550)
texture = ExtResource("2_fps3c")

[node name="Hud" parent="." instance=ExtResource("3_s77pf")]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GameOverMenu" parent="." instance=ExtResource("6_xkat8")]
process_mode = 2

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
